tests/bad/value_enums/shared_field_name_conflict_0.oc
/// fail: Field with name `x` already exists

enum Foo {
    x: i32
    y: i32
    x: str

    FooA(str)
    FooB(untyped_ptr)
    FooC
}

def main() => 0